--- a/grafast/website/src/css/common.module.css
+++ b/grafast/website/src/css/common.module.css
@@ -1,30 +1,32 @@
-.contents {
-  display: flex;
-  align-items: space-between;
-  padding: 2rem 0;
-  width: 100%;
-  color: var(--ifm-color-primary-darkest);
+.mainSectionInstructionContainer {
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
 }
 
-[data-theme="dark"] .contents {
-  color: var(--ifm-color-primary-lightest);
+.comicFont {
+  font-family: "Sriracha", "Comic Sans MS", "Comic Sans", sans;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-style: italic;
 }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.instruction {
+  composes: comicFont;
+  display: inline-block;
+  border: 5px solid var(--black-ish);
+  background: #a3f9a8;
+  box-shadow: 0.5rem 0.5rem 0px var(--black-ish);
+  margin: 1rem 0;
+  padding: 0.25rem 0.75rem 0.25rem 0.5rem;
+  color: var(--black-ish);
 }
 
-.row {
-  justify-content: space-between;
+.instruction {
+  font-size: 1.5rem;
+  line-height: 100%;
 }
 
-.header {
-  font-size: 2.5rem;
-  font-weight: normal;
-}
-
-.tagline {
-  font-weight: normal;
+[data-theme="dark"] .instruction {
+  background: #008a00;
+  color: white;
 }
