--- a/grafast/website/src/css/custom.css
+++ b/grafast/website/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #29772c; /* #2e8555; */
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #29772c;
+  --ifm-color-primary-dark: #1e4826;
+  --ifm-color-primary-darker: #0d2612;
+  --ifm-color-primary-darkest: var(--black-ish);
+  --ifm-color-primary-light: var(--grafast-color-caption);
+  --ifm-color-primary-lighter: #bce8bd;
+  --ifm-color-primary-lightest: #d8f2d9;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --stripe-light: rgba(136, 217, 139, 0.3);
